--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -1,19 +1,17 @@
 <!doctype html>
 <html>
-  <head>
-    <meta charset="utf-8">
+<head>
+  <meta charset="utf-8">
+  <meta content="IE=edge,chrome=1" http-equiv="X-UA-Compatible">
+  <meta name="viewport" content="width=device-width,initial-scale=1,user-scalable=no">
+  <title><%= current_page.data.title || "Erica Eso" %></title>
+  <%= stylesheet_link_tag "application" %>
+</head>
 
-    <!-- Always force latest IE rendering engine or request Chrome Frame -->
-    <meta content="IE=edge,chrome=1" http-equiv="X-UA-Compatible">
-
-    <!-- Use title if it's in the page YAML frontmatter -->
-    <title><%= current_page.data.title || "The Middleman" %></title>
-
-    <%= stylesheet_link_tag "normalize", "all" %>
-    <%= javascript_include_tag  "all" %>
-  </head>
-
-  <body class="<%= page_classes %>">
-    <%= yield %>
-  </body>
+<body class="<%= page_classes %>">
+  <%= yield %>
+  <script src="javascripts/vendor/jquery.min.js"></script>
+  <script src="http://cdnjs.cloudflare.com/ajax/libs/modernizr/2.8.2/modernizr.js"></script>
+  <script>$(function($){ Eso.initialize(); });</script>
+</body>
 </html>
