basic files+styles

--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -2,4 +2,38 @@
 title: E R I C A E S O
 ---
 
-<h1>home</h1>
+<section class="esoesoeso">
+  <div class="content">
+    <p>hello</p>
+  </div>
+</section>
+<section class="esoesoeso">
+  <div class="content">
+    <p>hello</p>
+  </div>
+</section>
+<section class="esoesoeso">
+  <div class="content">
+    <p>hello</p>
+  </div>
+</section>
+<section class="esoesoeso">
+  <div class="content">
+    <p>hello</p>
+  </div>
+</section>
+<section class="esoesoeso">
+  <div class="content">
+    <p>hello</p>
+  </div>
+</section>
+<section class="esoesoeso">
+  <div class="content">
+    <p>hello</p>
+  </div>
+</section>
+<section class="esoesoeso">
+  <div class="content">
+    <p>hello</p>
+  </div>
+</section>
