--- a/source/stylesheets/_home.scss
+++ b/source/stylesheets/_home.scss
@@ -1,5 +1,12 @@
 @import "mix";
 
-h1 {
-  color: red;
+.esoesoeso {
+  border: 2px solid aquamarine;
+  display: flex;
+  align-items: center;
+}
+
+.content {
+  width: 100%;
+  text-align: center;
 }
