--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -12,6 +12,7 @@
   <%= yield %>
   <script src="javascripts/vendor/jquery.min.js"></script>
   <script src="http://cdnjs.cloudflare.com/ajax/libs/modernizr/2.8.2/modernizr.js"></script>
+  <%= javascript_include_tag "all" %>
   <script>$(function($){ Eso.initialize(); });</script>
 </body>
 </html>
