--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -2,37 +2,37 @@
 title: E R I C A E S O
 ---
 
-<section class="esoesoeso">
+<section class="esoesoeso one">
   <div class="content">
     <p>hello</p>
   </div>
 </section>
-<section class="esoesoeso">
+<section class="esoesoeso two">
   <div class="content">
     <p>hello</p>
   </div>
 </section>
-<section class="esoesoeso">
+<section class="esoesoeso three">
   <div class="content">
     <p>hello</p>
   </div>
 </section>
-<section class="esoesoeso">
+<section class="esoesoeso four">
   <div class="content">
     <p>hello</p>
   </div>
 </section>
-<section class="esoesoeso">
+<section class="esoesoeso five">
   <div class="content">
     <p>hello</p>
   </div>
 </section>
-<section class="esoesoeso">
+<section class="esoesoeso six">
   <div class="content">
     <p>hello</p>
   </div>
 </section>
-<section class="esoesoeso">
+<section class="esoesoeso seven">
   <div class="content">
     <p>hello</p>
   </div>
