--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -7,11 +7,232 @@ title: E R I C A E S O
     <p>hello</p>
   </div>
 </section>
-<section class="esoesoeso two">
+<section class="esoesoeso two dates">
   <div class="content">
-    <p>hello</p>
+    <!-- ***********************************************
+    ************  T O U R    D A T E S *****************
+    *************************************************-->
+
+    <!-- ~~~~~~~~~~~~~~~~~ paste block directly underneath this line for a new show  ~~~~~~~~~~~~~~~~~ -->
+
+
+    <!-- TOP OF CODE BLOCK (THIS IS THE FIRST SHOW DISPLAYED)-->
+    <ul class="show-info">
+      <li>SUN DEC 6TH<br/>
+
+        <!-- ~~~~~~~~~~~ this is a L I N K to an event ~~~~~~~~~~~~~ -->
+        <a target="_blank" href="https://www.facebook.com/events/792739434205721/">(LANDLADY HOLIDAY EXTRAVAGANZA!)</a>
+        <!-- ^^^ remove the line above if you do not need a link ^^^ -->
+
+      </li>
+      <li>BROOKLYN @ THE BELL HOUSE</li>
+      <li>W/ LAND, NELS CLINE, BIG THIEF, GEMMA, CASSANDRA JENKINS AND MANY MORE</li>
+    </ul>
+    <!-- ^^^ BOTTOM OF CODE BLOCK ^^^ -->
+
+
+    <!-- ~~~~~~~~~~~~~~~~~~~~~~~~ ~~~~~~~~~~~~~~~~~~~~  ~~~~~~~~~~~~~~~~~~~~~~~~ -->
+    <!-- ~~~~~~~~~~~~~~~~~~~~~~~~ ~~~~~~~~~~~~~~~~~~~~  ~~~~~~~~~~~~~~~~~~~~~~~~ -->
+
+    <!-- ENTER NEW SHOW CODE BLOCK BELOW HERE -->
+
+    <ul class="show-info">
+      <li>THURS DEC 10TH<br/>
+
+        <!-- ~~~~~~~~~~~ this is a L I N K to an event ~~~~~~~~~~~~~ -->
+        <a target="_blank" href="https://www.facebook.com/events/1657709444500822/">(BENEFIT CONCERT)</a>
+        <!-- ^^^ remove the line above if you do not need a link ^^^ -->
+
+      </li>
+      <li>BROOKLYN @ C'MON EVERYBODY</li>
+      <li>W/ LEVERAGE MODELS, GEMMA AND FIELD GUIDES</li>
+    </ul>
+
+    <ul class="show-info">
+      <li>SAT JAN 2ND<br/>
+
+      </li>
+      <li>BROOKLYN @ SILENT BARN</li>
+      <li>W/ CELESTIAL SHORE FLASHLIGHT-O AND TBA</li>
+    </ul>
+
+    <ul class="show-info">
+      <li>SAT JAN 16TH<br/>
+
+      </li>
+      <li>BROOKLYN @ SHEA STADIUM</li>
+      <li>W/ GUERILLA TOSS, ZULA AND TBA</li>
+    </ul>
+
+    <!--
+    **********************************************
+    **** LAST SHOW MODULE MUST BE ABOVE THIS *****
+    **********************************************-->
   </div>
 </section>
+
+
+<section class="lyric-grid">
+  <section id="shuffle">
+      <div  data-sr="wait .5s, move 20px, reset" class="tilt"><pre>make you feel this song/way
+  when i can't even feel this song/way</pre></div>
+      <div data-sr="wait .5s, move 30px, reset"><pre>colors much
+  deeper than
+    i can see</pre></div>
+      <div data-sr="wait .5s, move 10px, reset"><pre>if yr diagonal
+  i'm a triangle oh</pre></div>
+      <div data-sr="wait .5s, move 30px, reset"><pre>   you know you
+             kinda
+  feel good anyway</pre></div>
+      <div data-sr="wait .5s, move 35px, reset" class="turn"><pre>  i feel
+       below
+       the surface
+       of i think
+  too much</pre></div>
+      <div class="tilt"><pre>yellow stare
+  silent breath</pre></div>
+      <div data-sr="wait .5s, move 20px"><pre>i'd like live to a hundred
+  years old</pre></div>
+      <div class="turn"><pre>ah</pre></div>
+      <div data-sr="wait .5s, move 10px, reset"><pre> i was born to dunk
+  but i'm bored and drugged
+  </pre></div>
+      <div><pre>rings too deep
+  to ever
+  simply agree </pre></div>
+      <div data-sr="wait .5s, move 10px, reset" class="tilt"><pre>the atlantic</pre></div>
+      <div data-sr="wait .5s, move 20px, reset"><pre>chelsea/bradley oh</pre></div>
+      <div data-sr="wait .5s, move 30px, reset"><pre>didn't come
+        no drum
+  didn't come from
+          no strummin'
+  </pre></div>
+      <div data-sr="wait .5s, move 35px, reset" ><pre>unwieldy
+        bearded face
+  unyielding
+  human race</pre></div>
+      <div  data-sr="wait .5s, move 15px, reset" class="turn"><pre>ooh boy
+  ah ah ah</pre></div>
+      <div data-sr="wait .5s, move 30px, reset" class="turn"><pre>manipulate
+        yr body
+  yr a woman body
+     builder</pre></div>
+      <div><pre>   open night
+           hallow words
+  my body uncurls</pre></div>
+      <div data-sr="wait .5s, move 25px, reset" class="turn"><pre>
+  hoo
+  hoo
+  hoo
+  hoo
+  hoo
+  hoo</pre></div>
+      <div data-sr="wait .5s, move 30px, reset"><pre>you got neer
+        me ruuner</pre></div>
+      <div data-sr="wait .5s, move 15px, reset"><pre>            dance hall
+                        broken heart
+         drivin' in the country
+  all my friends around me    gotta get reborn</pre></div>
+      <div><pre>  how is she so beautiful
+  when she's so clearly a man</pre></div>
+      <div class="back"><pre>i
+     you
+      this
+            might have this</pre></div>
+  <div data-sr="wait .5s, move 20px, reset" class="tilt"><pre>gender it</pre></div>
+
+      <div data-sr="wait .5s, move 20px, reset"><pre>i feel words</pre></div>
+      <div  data-sr="wait .5s, move 10px, reset" class="tilt"><pre>if you are you and me
+  then they
+  then we're crippled symmetry</pre></div>
+  <div data-sr="wait .5s, move 10px, reset" class="back"><pre>this attic it</pre></div>
+      <div><pre>bells they sound
+  bells they deem</pre></div>
+      <div><pre>                                                                                        sound of the space that it occupies
+                                                                  but about the
+  it's not about where the song goes</pre></div>
+      <div><pre>        half you/half free
+  lungs bleached white from
+             plastic debris</pre></div>
+      <div><pre>nananananananananananananananana</pre></div>
+  <div data-sr="wait .5s, move 30px, reset"><pre>i feel touch</pre></div>
+  <div><pre>if yr geronimo
+  i'm guantanamo oh</pre></div>
+  <div data-sr="wait .5s, move 10px, reset"><pre>hold my baby hostage like i told her
+    i was pregnant with music/music</pre></div>
+  <div><pre>born to
+  the new jack swing</pre></div>
+  <div data-sr="wait .5s, move 25px, reset"><pre>oh/hold/coast/gold
+                          atlantic</pre></div>
+  <div class="turn"><pre>tom boy
+  drippin' 'til
+  we smell the rain</pre></div>
+  <div  data-sr="wait .5s, move 30px, reset"class="back"><pre>the fire it</pre></div>
+  <div class="back"><pre>atlantic it</pre></div>
+  <div  data-sr="wait .5s, move 20px, reset"class="turn"><pre>hit her</pre></div>
+  <div data-sr="wait .5s, move 30px, reset"><pre>this diet has no
+    fruit without you</pre></div>
+  <div><pre>if you are medical/i am hospital</pre></div>
+  <div data-sr="wait .5s, move 30px, reset"><pre>uh huh</pre></div>
+  <div class="tilt"><pre>hollywood's american
+  clutch</pre></div>
+  <div data-sr="wait .5s, move 10px, reset"><pre>portrait of
+    the hopi woman
+  left you longin'
+  like forever
+  </pre></div>
+  <div><pre>auditory fever dream</pre></div>
+  <div data-sr="wait .5s, move 30px, reset"><pre>if yr melodious
+         i'm the lonliest song</pre></div>
+  <div><pre>we walk this death-spread what loaded use </pre></div>
+  <div><pre>the water's hard
+             the water's far gone</pre></div>
+  <div class="turn"><pre>i'm gone</pre></div>
+  <div data-sr="wait .5s, move 20px, reset"><pre>         feel/touch
+  wouldn't call for fun</pre></div>
+  <div class="tilt"><pre>uh huh</pre></div>
+
+
+  <div data-sr="wait .5s, move 10px, reset" class="back"><pre>boredom it</pre></div>
+  <div class="tilt"><pre>jargon it</pre></div>
+
+
+  <div data-sr="wait .5s, move 20px, reset" class="turn"><pre>it/they is/are burning
+  eyes closed for half a year
+        starin' at those lids
+  yeah that's where you are</pre></div>
+  <div><pre></pre></div>
+
+  <div><pre>you saw birds
+    when i saw feathers
+    when we were together
+    that's where you are
+  </pre></div>
+  <div data-sr="wait .5s, move 30px, reset" ><pre>swung fast when threw knuckle
+  just under the buckle</pre></div>
+  <div><pre>whole world
+  so so so so so mad</pre></div>
+  <div data-sr="wait .5s, move 30px, reset"  class="turn"><pre>2019</pre></div>
+
+  <div><pre>burning memories right
+    into me while you forget
+   everything you are</pre></div>
+  <div class="tilt"><pre>war crimes they</pre></div>
+  <div class="back"><pre>cave air it</pre></div>
+  <div class="tilt"><pre>justice it</pre></div>
+  <div data-sr="wait .5s, move 10px, reset"  class="back"><pre>shadow it</pre></div>
+  <div data-sr="wait .5s, move 30px, reset" ><pre>that's where you are</pre></div>
+  <div data-sr="wait .5s, move 20px, reset" ><pre>        yr dyin'
+  just invisible-izing that body
+  yeah that's where you are</pre></div>
+  <div data-sr="wait .5s, move 30px, reset" ><pre>a
+    hundred
+                   years
+                            from now</pre></div>
+  </section>
+</section>
+
+
 <section class="esoesoeso three">
   <div class="content">
     <p>hello</p>
