--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -25,6 +25,7 @@
   <script src="javascripts/vendor/jquery.min.js"></script>
   <script src="http://cdnjs.cloudflare.com/ajax/libs/modernizr/2.8.2/modernizr.js"></script>
   <%= javascript_include_tag "all" %>
+    <script src="javascripts/vendor/scrollReveal.js"></script>
   <script>$(function($){ Eso.initialize(); });</script>
 </body>
 </html>
