--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -13,9 +13,17 @@
 <body class="<%= page_classes %>">
 <header class="soundcloud">
   <span>
-    <h1><span>ERICA ESO</span><br/><span class="disclaimer">debut album 2019
-    <br/>on
-    <a target="_blank" href="https://www.facebook.com/Ramp-Local-1573601239579420/timeline/">Ramp Local Records</a></span></h1>
+    <span class="main-header">
+      <h1><span>ERICA ESO</span><br/><span class="disclaimer">debut album 2019
+      <br/>on
+      <a target="_blank" href="https://www.facebook.com/Ramp-Local-1573601239579420/timeline/">Ramp Local Records</a></span></h1>
+    </span>
+    <span class="show-header">
+      <h1>SHOW DATES</h1>
+    </span>
+    <span class="secondary">
+      <h1><span>ERICA ESO</span></h1>
+    </span>
   </span>
   <span>
     <iframe width="100%" height="120" scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/217076591&amp;color=dcb7ff&amp;auto_play=false&amp;hide_related=false&amp;show_comments=true&amp;show_user=true&amp;show_reposts=false"></iframe>
