--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -5,80 +5,36 @@ title: E R I C A E S O
 <section class="esoesoeso one">
   <div class="content">
     <div data-sr="wait .25s, move 15px, reset">
-      <a class="purchase-button" target="_blank" href="https://ramplocal.bandcamp.com/" class="ramp-local">Click here purchase Cassette and CD from Ramp Local Records</a>
+      <a class="purchase-button" target="_blank" href="https://ramplocal.bandcamp.com/" class="ramp-local"><span>Click here purchase Cassette and CD from Ramp Local Records</span></a>
+    </div>
+    <div class="video-wrapper">
+      <div class="video-container" data-sr="wait .25s, move 15px, reset">
+        <iframe width="100%" src="https://www.youtube.com/embed/kVim_AOb0rs?modestbranding=1&autohide=1&showinfo=0&controls=0" frameborder="0" allowfullscreen></iframe>
+        <div class="border"></div>
+      </div>
     </div>
     <div data-sr="wait .25s, move 15px, reset">
-      <iframe width="560" height="315" src="https://www.youtube.com/embed/kVim_AOb0rs" frameborder="0" allowfullscreen></iframe>
-    </div>
-    <div data-sr="wait .25s, move 15px, reset">
-      <a class="press-button" href="#eso-press">Press</a>
+      <a class="press-button" href="#eso-press"><span>Press</span></a>
     </div>
 </section>
-
 <section class="esoesoeso two dates">
   <div class="content">
-    <!-- ***********************************************
-    ************  T O U R    D A T E S *****************
-    *************************************************-->
-
-    <!-- ~~~~~~~~~~~~~~~~~ paste block directly underneath this line for a new show  ~~~~~~~~~~~~~~~~~ -->
-
-
-    <!-- TOP OF CODE BLOCK (THIS IS THE FIRST SHOW DISPLAYED)-->
-    <ul class="show-info">
-      <li>SUN DEC 6TH<br/>
-
-        <!-- ~~~~~~~~~~~ this is a L I N K to an event ~~~~~~~~~~~~~ -->
-        <a target="_blank" href="https://www.facebook.com/events/792739434205721/">(LANDLADY HOLIDAY EXTRAVAGANZA!)</a>
-        <!-- ^^^ remove the line above if you do not need a link ^^^ -->
-
-      </li>
-      <li>BROOKLYN @ THE BELL HOUSE</li>
-      <li>W/ LAND, NELS CLINE, BIG THIEF, GEMMA, CASSANDRA JENKINS AND MANY MORE</li>
-    </ul>
-    <!-- ^^^ BOTTOM OF CODE BLOCK ^^^ -->
-
-
-    <!-- ~~~~~~~~~~~~~~~~~~~~~~~~ ~~~~~~~~~~~~~~~~~~~~  ~~~~~~~~~~~~~~~~~~~~~~~~ -->
-    <!-- ~~~~~~~~~~~~~~~~~~~~~~~~ ~~~~~~~~~~~~~~~~~~~~  ~~~~~~~~~~~~~~~~~~~~~~~~ -->
-
-    <!-- ENTER NEW SHOW CODE BLOCK BELOW HERE -->
-
-    <ul class="show-info">
-      <li>THURS DEC 10TH<br/>
-
-        <!-- ~~~~~~~~~~~ this is a L I N K to an event ~~~~~~~~~~~~~ -->
-        <a target="_blank" href="https://www.facebook.com/events/1657709444500822/">(BENEFIT CONCERT)</a>
-        <!-- ^^^ remove the line above if you do not need a link ^^^ -->
-
-      </li>
-      <li>BROOKLYN @ C'MON EVERYBODY</li>
-      <li>W/ LEVERAGE MODELS, GEMMA AND FIELD GUIDES</li>
-    </ul>
-
-    <ul class="show-info">
-      <li>SAT JAN 2ND<br/>
-
-      </li>
-      <li>BROOKLYN @ SILENT BARN</li>
-      <li>W/ CELESTIAL SHORE FLASHLIGHT-O AND TBA</li>
-    </ul>
-
-    <ul class="show-info">
-      <li>SAT JAN 16TH<br/>
-
-      </li>
-      <li>BROOKLYN @ SHEA STADIUM</li>
-      <li>W/ GUERILLA TOSS, ZULA AND TBA</li>
-    </ul>
-
-    <!--
-    **********************************************
-    **** LAST SHOW MODULE MUST BE ABOVE THIS *****
-    **********************************************-->
+    <a class="show-link" href="#">
+      <ul class="show-info">
+        <li>SUN DEC 6TH</li>
+        <li>BROOKLYN @ THE BELL HOUSE</li>
+        <li>W/ LAND, NELS CLINE, BIG THIEF, GEMMA, CASSANDRA JENKINS AND MANY MORE</li>
+      </ul>
+    </a>
+    <a class="show-link" href="#">
+      <ul class="show-info">
+        <li>SUN DEC 6TH</li>
+        <li>BROOKLYN @ THE BELL HOUSE</li>
+        <li>W/ LAND, NELS CLINE, BIG THIEF, GEMMA, CASSANDRA JENKINS AND MANY MORE</li>
+      </ul>
+    </a>
   </div>
 </section>
-
 <section class="lyric-grid">
   <section id="shuffle">
       <div  data-sr="wait .5s, move 20px, reset" class="tilt"><pre>make you feel this song/way
@@ -249,8 +205,10 @@ title: E R I C A E S O
         <img data-sr="wait .25s, move 35px, reset" data-behavior="show-bell" src="images/bell.png">
         <img data-sr="wait .25s, move 45px, reset" data-behavior="show-iris" src="images/iris.png">
       </div>
-      <div class="show iris">
-        <iframe width="100%" height="315" src="https://www.youtube.com/embed/m2tM1PEaKAo" frameborder="0" allowfullscreen></iframe>
+      <div class="show iris video-wrapper">
+        <div class="video-container">
+          <iframe width="100%" height="315" src="https://www.youtube.com/embed/m2tM1PEaKAo" frameborder="0" allowfullscreen></iframe>
+        </div>
       </div>
       <div class="show randy">
         <img src="images/randy-gif.gif">
@@ -258,24 +216,27 @@ title: E R I C A E S O
       <div class="show judith">
         <p>"Language... is a set of acts, repeated over time, that produce reality-effects that are eventually misrepresented as "facts". Collectively considered, the repeated practice of naming sexual difference has created this appearance of natural division. The "naming" of sex is an act of domination and compulsion, an institutionalized performative that both creates and legislates social reality...Hence, we are compelled in our bodies and our minds to correspond, feature by feature, with the idea of nature that has been established for us...'men' and 'women' are political categories, and not natural facts."<br/> -Judith Butler</p>
       </div>
-      <div class="show bell">
-        <iframe width="100%" height="315" src="https://www.youtube.com/embed/_LL0k6_pPKw" frameborder="0" allowfullscreen></iframe>
+      <div class="show bell video-wrapper">
+        <div class="video-container">
+          <iframe width="100%" height="315" src="https://www.youtube.com/embed/_LL0k6_pPKw" frameborder="0" allowfullscreen></iframe>
+        </div>
       </div>
     </div>
   </div>
 </section>
-
 <section class="esoesoeso four">
   <div class="content">
-    <p>hello</p>
+    <div class="social">
+      <p>follo erica eso</p>
+      <a target="_blank" href="https://www.facebook.com/EricaEsoMusic">facebook</a>
+      <a target="_blank" href="https://www.instagram.com/ericaeso/">instagram</a>
+      <a target="_blank" href="https://twitter.com/EricaEsoMusic">twitter</a>
+    </div>
   </div>
 </section>
-
 <section id="eso-press" class="press">
   <div class="content">
     <h1>.. .. .. PRESS .. .. ..</h1>
-
-    <!--************************************************** BEGIN PRESS MODULE ***************************************************-->
     <a target="_blank" href="http://www.tinymixtapes.com/chocolate-grinder/premiere-erica-eso-one-hundred-years">Tiny Mix Tapes</a>
     <p>"Perhaps one of the most quotable hooks of 2015 comes from an unexpected source. Erica Eso, a new “globalized pop” sensation..."</p><p class="read-more" data-behavior="read-more">read more</p>
     <ul>
@@ -284,8 +245,6 @@ title: E R I C A E S O
       <li>As “future-minded” music slogs along with its flighty, speculative agenda, Erica Eso places it distinctly within the human heart; the track professes an optimism that drives the creative will into the “unknown-known” of human closeness, like a warm human touch radiating with robotic energy. Such hybrid sentimentality is much needed, but it comes packaged alongside potentially subversive art-tactics. Yes, the group’s optimism reaches outward, but it’s decoy-persona of accessibility gives way to guitar-squall and mystery. The track’s willful submission to a sturdy pop format is coupled with genuine peculiarity – a compassionate experimentalism anticipating dystopia, without being turned cold by it.</li>
     </ul>
     <span>by SCVSCV 9/23/15</span>
-    <!--************************************************* END PRESS MODULE ***************************************************-->
-
     <a target="_blank" href="http://www.factmag.com/2015/11/06/name-your-price-octobers-best-bandcamp-releases/7/">FACT MAG</a>
     <p>"shifting between breathy, confessional vocals and sections autotuned down to impressionistic smears of data..."</p>
     <p class="read-more" data-behavior="read-more">read more</p>
@@ -293,9 +252,6 @@ title: E R I C A E S O
      <li>Erica Eso is a project from Weston Minissali, who’s known for his elastic keyboard work with Brooklyn band Cloud Becomes Your Hand. 2019 delivers some of the same bent sonics alongside vocals that range from untouched to processed beyond recognition. ’Reborn’ does both, shifting between breathy, confessional vocals and sections autotuned down to impressionistic smears of data. That one has a nice overload to it, but more often than not 2019 is an album of delicate moments, such as the floating middle section of ‘Good Good Bad’, ‘Iris Kyle’, and ‘~Pink Atlantic~’. Finding that balance between “experimental” and “pop” is the trick, though (something Cloud nailed last year on their excellent album Rocks Or Cakes), and 2019 delivers immediately with opener ‘One Hundred Years’, a catchy assurance that Erica Eso can walk that line even with their heads stuck in the clouds.</li>
     </ul>
     <span>by Miles Bowe 11/6/15</span>
-
-
-
     <a target="_blank" href="http://www.tabsout.com/?p=10578">TABS OUT</a>
     <p>" 2019 is an album of tightly-written songs with enduring melodies that convey both a sense of tender fragility and a kind of archetypal carved-in-stone inevitability..."</p>
     <p class="read-more" data-behavior="read-more">read more</p>
@@ -307,9 +263,6 @@ title: E R I C A E S O
       <li>So if you like getting supersize seasonal feels from music, you’re gonna want to check out Erica Eso. A live band lineup rolls out to support this album on October 16, also the official release date for 2019. You can check tour dates at Erica Eso’s website, and you can preorder the album from Ramp Local.</li>
     </ul>
     <span>by Scott Scholz 10/13/15</span>
-
-
-
     <a target="_blank" href="http://music.mxdwn.com/2015/10/21/reviews/erica-eso-2019/">MXDWN</a>
     <p>"asks the question “what is this?"..."</p>
     <p class="read-more" data-behavior="read-more">read more</p>
@@ -320,12 +273,8 @@ title: E R I C A E S O
       <li>What this is, seems to be happening more within the words than the music. Mostly there is an overall hope for the future, which may be why the album gets its name from a year that is four years into the future; maybe it is a hope for where Erica Eso will be in four years. At times, though, these songs touch on ideas of gender fluidity, the most obviously being “Good Good Bad” a love song that focuses on a woman and “how is she so beautiful when she’s so clearly a man.” Either way, it is the use of these abstract sounds that allows Erica Eso to actually explore either idea without feeling the constraints of the expected rules.</li>
     </ul>
     <span>by Megan Huffman 10/21/15</span>
-
-
-
     <a target="_blank" href="https://www.mixcloud.com/WordsOnSounds/words-on-sounds-ep-49/">WORDS ON SOUNDS PODCAST Ep. 49</a>
     <p>podcast feature</p>
-
     <a target="_blank" href="http://nyc.thedelimagazine.com/21993/weston-minissali-releases-singles-for-his-latest-musical-venture-erica-eso-from-upcoming-album">DELI</a>
     <p>"Erica Eso's first singles make it clear that Minissali's talents as an experimental composer span across genres..."</p>
     <p class="read-more" data-behavior="read-more">read more</p>
@@ -334,8 +283,6 @@ title: E R I C A E S O
     <li>The name Erica Eso may sound like some music making beauty, but it's actually the latest musical brain-child of Weston Minissali, also known as the synth player from Cloud Becomes Your Hand. Erica Eso's synth-heavy pop melodies are a clear departure from the otherworldly avant-rock sound of Cloud Becomes Your Hand, but Erica Eso's first singles make it clear that Minissali's talents as an experimental composer span across genres. As of last week, the first singles from Erica Eso's upcoming album, "2019," are now available for streaming (below) on SoundCloud and Bandcamp with the full release coming later this year.</li>
     </ul>
     <span>by Sam o'Hara 7/9/15</span>
-
-
     <a target="_blank" href="http://bostonhassle.com/2015/11/cloud-becomes-your-hand-and-erica-esos-weston-minissali-is-in-the-heart-zone/">BOSTON HASSLE</a>
     <p class="read-more"data-behavior="read-more">read full interview</p>
     <ul>
@@ -358,10 +305,6 @@ title: E R I C A E S O
       <li><strong>WM:</strong> Erica Eso will be releasing some music video’s in the next few months while working on the next record. We’ll jus be playing NY until maybe January, when I’d like to come back to Boston again. Hey Sam, wanna book us a show? Cloud Becomes Your Hand has a lot on our horizon. I’m super excited to release our next record with Northern Spy again, that’ll be out in spring 2016. We’ll most definitely be hitting up Boston and a bunch of the country around then.</li>
     </ul>
     <span>By Keeley Cormac 11/5/15</span>
-
-
-
-
     <a target="_blank" href="https://bostonhassle.com/2015/10/erica-eso-2019/">BOSTON HASSLE</a>
     <p>"clean dance music, with existential themes, no unnecessary sounds..."</p>
     <p class="read-more" data-behavior="read-more">read more</p>
