--- a/source/stylesheets/_home.scss
+++ b/source/stylesheets/_home.scss
@@ -6,9 +6,7 @@ a {
     color: aquamarine;
   }
 }
-
 .esoesoeso {
-  border: 2px solid aquamarine;
   display: flex;
   align-items: center;
 }
@@ -17,10 +15,40 @@ a {
   width: 100%;
   text-align: center;
 }
+.video-wrapper {
+  max-width: 700px;
+  margin: 0 auto;
+  padding: 0 40px;
+}
+.video-container {
+  position: relative;
+  padding-bottom: 56.25%;
+  height: 0;
+  overflow: hidden;
 
+  .border {
+    position: absolute;
+    top: 0px;
+    height: 100%;
+    width: 100%;
+    border: 25px solid transparent;
+    z-index: -999999;
+  }
+}
+.video-container iframe,
+.video-container object,
+.video-container embed {
+  position: absolute;
+  top: 0px;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  @include breakpoint(tablet-desktop) {
+    top: 50px;
+  }
+}
 .dates {
   ul {
-    border: 1px dashed aquamarine;
     margin-bottom: 40px;
     padding: 10px 20px;
     display: flex;
@@ -30,6 +58,12 @@ a {
     text-align: left;
     list-style: none;
     width: 100%;
+    li {
+      font-size: .625em;
+      @include breakpoint(tablet-desktop) {
+        font-size: .75em;
+      }
+    }
     li a {
       color: mediumpurple;
       &:hover {
@@ -42,7 +76,6 @@ a {
     }
   }
 }
-
 .lyric-grid {
   background: url('../images/large-grid-pink.png') no-repeat center center;
   -webkit-background-size: cover;
@@ -83,36 +116,49 @@ a {
   }
 }
 
-.press-button, .purchase-button {
-
-}
 .purchase-button {
+  display: none;
   position: fixed;
   overflow: hidden;
   right: 10px;
+  top: 450px;
+  padding: 15px;
   border: 4px solid aquamarine;
+  text-transform: uppercase;
+  font-size: .625em;
+  letter-spacing: .09em;
+  -ms-transform: rotate(-45deg);-webkit-transform: rotate(-45deg);transform: rotate(-45deg);
+  @include breakpoint(tablet-desktop) {
+    display: block;
+    &:hover {
+      color: #4587ff;
+    }
+  }
 }
-
 .press-button {
+  display: none;
   position: fixed;
   overflow: hidden;
   bottom: 0px;
   left: 40px;
   width: 110px;
   height: 110px;
-  border: 4px solid hotpink;
+  border: 4px solid #4587ff;
   border-radius: 50%;
+  @include breakpoint(tablet-desktop) {
+    display: block;
+  }
   &:hover {
-    background-color: hotpink;
-    a {
+    background-color: #4587ff;
+    span {
       color: #fff;
     }
   }
 
-  a {
+  span {
     cursor: pointer;
     text-decoration: none;
-    color: hotpink;
+    color: #4587ff;
     position: absolute;
     margin: 0 auto;
     left: 0;
@@ -125,7 +171,6 @@ a {
     text-transform: uppercase;
   }
 }
-
 .press {
   background-color: rgba(255,255,255,1);
   padding: 30px;
@@ -174,7 +219,6 @@ a {
       }
     }
   }
-
   ul {
     list-style: none;
     text-align: left;
