--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -236,7 +236,7 @@ title: E R I C A E S O
 </section>
 <section id="eso-press" class="press">
   <div class="content">
-    <h1>.. .. .. PRESS .. .. ..</h1>
+    <h1>PRESS</h1>
     <a target="_blank" href="http://www.tinymixtapes.com/chocolate-grinder/premiere-erica-eso-one-hundred-years">Tiny Mix Tapes</a>
     <p>"Perhaps one of the most quotable hooks of 2015 comes from an unexpected source. Erica Eso, a new “globalized pop” sensation..."</p><p class="read-more" data-behavior="read-more">read more</p>
     <ul>
